UCF-APR2.4/ftr main/force-app/main/default/objects/ReportQuickQuote__c/ReportQuickQuote__c.object-meta.xml
<CustomObject>
    <label>Report Quick Quote</label>
    <nameField>
        <label>Report Quick Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Quick Quote</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>