UCF-APR2.4/ftr main/force-app/main/default/objects/ReportQuickQuote__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <length>125</length>
    <type>Text</type>
</CustomField>