UCF-APR2.4/ftr main/force-app/main/default/objects/ReportQuickQuote__c/fields/DSAT_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>DSAT_Ticket_Number__c</fullName>
    <label>DSAT Ticket Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>