UCF-APR2.4/ftr main/force-app/main/default/objects/ReportQuickQuote__c/fields/Event_Step__c.field-meta.xml
<CustomField>
    <fullName>Event_Step__c</fullName>
    <label>Event Step</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Address Request</fullName>
            </value>
            <value>
                <fullName>Product Request</fullName>
            </value>
            <value>
                <fullName>Pricing Request</fullName>
            </value>
            <value>
                <fullName>Opportunity Saved</fullName>
            </value>
            <value>
                <fullName>Qualify Location</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>