UCF-APR2.4/ftr main/force-app/main/default/objects/ReportQuickQuote__c/fields/Event_Step_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Step_Time__c</fullName>
    <label>Event Step Date and Time</label>
    <type>DateTime</type>
</CustomField>