UCF-APR2.4/ftr main/force-app/main/default/objects/ReportQuickQuote__c/fields/Frontier_Served_Address__c.field-meta.xml
<CustomField>
    <fullName>Frontier_Served_Address__c</fullName>
    <label>Frontier Served Address</label>
    <length>5</length>
    <type>Text</type>
</CustomField>