UCF-APR2.4/ftr main/force-app/main/default/objects/ReportQuickQuote__c/fields/Interface_Type__c.field-meta.xml
<CustomField>
    <fullName>Interface_Type__c</fullName>
    <label>Interface Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>