UCF-APR2.4/ftr main/force-app/main/default/objects/ReportQuickQuote__c/fields/IP_Block__c.field-meta.xml
<CustomField>
    <fullName>IP_Block__c</fullName>
    <label>IP Block</label>
    <length>50</length>
    <type>Text</type>
</CustomField>