UCF-APR2.4/ftr main/force-app/main/default/objects/ReportQuickQuote__c/fields/Lat_Long__c.field-meta.xml
<CustomField>
    <fullName>Lat_Long__c</fullName>
    <label>Lat/Long</label>
    <length>50</length>
    <type>Text</type>
</CustomField>