UCF-APR2.4/ftr main/force-app/main/default/objects/ReportQuickQuote__c/fields/Lit_Onnet_Address__c.field-meta.xml
<CustomField>
    <fullName>Lit_Onnet_Address__c</fullName>
    <label>Lit-Onnet Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>