UCF-APR2.4/ftr main/force-app/main/default/objects/ReportQuickQuote__c/fields/Managed_Router__c.field-meta.xml
<CustomField>
    <fullName>Managed_Router__c</fullName>
    <label>Managed Router</label>
    <length>5</length>
    <type>Text</type>
</CustomField>