UCF-APR2.4/ftr main/force-app/main/default/objects/ReportQuickQuote__c/fields/Master_Agent__c.field-meta.xml
<CustomField>
    <fullName>Master_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Agent</label>
    <referenceTo>Agent__c</referenceTo>
    <relationshipLabel>Report Quick Quote</relationshipLabel>
    <relationshipName>Report_Quick_Quote</relationshipName>
    <type>Lookup</type>
</CustomField>