UCF-APR2.4/ftr main/force-app/main/default/objects/ReportQuickQuote__c/fields/OmniScript_Id__c.field-meta.xml
<CustomField>
    <fullName>OmniScript_Id__c</fullName>
    <label>OmniScript Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>