UCF-APR2.4/ftr main/force-app/main/default/objects/ReportQuickQuote__c/fields/One_Time_Charge__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Charge__c</fullName>
    <defaultValue>0</defaultValue>
    <label>One Time Charge</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>