UCF-APR2.4/ftr main/force-app/main/default/objects/ReportQuickQuote__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Report Quick Quote</relationshipLabel>
    <relationshipName>Report_Quick_Quote</relationshipName>
    <type>Lookup</type>
</CustomField>