UCF-APR2.4/ftr main/force-app/main/default/objects/ReportQuickQuote__c/fields/Partner_Login__c.field-meta.xml
<CustomField>
    <fullName>Partner_Login__c</fullName>
    <label>Partner Login</label>
    <length>50</length>
    <type>Text</type>
</CustomField>