UCF-APR2.4/ftr main/force-app/main/default/objects/ReportQuickQuote__c/fields/Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Name__c</fullName>
    <label>Partner Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>