UCF-APR2.4/ftr main/force-app/main/default/objects/ReportQuickQuote__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <length>125</length>
    <type>Text</type>
</CustomField>