UCF-APR2.4/ftr main/force-app/main/default/objects/ReportQuickQuote__c/fields/Promotion__c.field-meta.xml
<CustomField>
    <fullName>Promotion__c</fullName>
    <label>Promotion</label>
    <length>50</length>
    <type>Text</type>
</CustomField>