UCF-APR2.4/ftr main/force-app/main/default/objects/ReportQuickQuote__c/fields/Qualification_status__c.field-meta.xml
<CustomField>
    <fullName>Qualification_status__c</fullName>
    <label>Qualification details</label>
    <length>125</length>
    <type>Text</type>
</CustomField>