UCF-APR2.4/ftr main/force-app/main/default/objects/ReportQuickQuote__c/fields/Qualify_By__c.field-meta.xml
<CustomField>
    <fullName>Qualify_By__c</fullName>
    <label>Qualify By</label>
    <length>20</length>
    <type>Text</type>
</CustomField>