UCF-APR2.4/ftr main/force-app/main/default/objects/ReportQuickQuote__c/fields/Recurring_Charge__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Charge__c</fullName>
    <label>Recurring Charge</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>