UCF-APR2.4/ftr main/force-app/main/default/objects/ReportQuickQuote__c/fields/Serviceability_Time__c.field-meta.xml
<CustomField>
    <fullName>Serviceability_Time__c</fullName>
    <label>Serviceability Time</label>
    <type>DateTime</type>
</CustomField>