UCF-APR2.4/ftr main/force-app/main/default/objects/ReportQuickQuote__c/fields/Subagent__c.field-meta.xml
<CustomField>
    <fullName>Subagent__c</fullName>
    <label>Subagent</label>
    <length>50</length>
    <type>Text</type>
</CustomField>