UCF-APR2.4/ftr main/force-app/main/default/objects/ReportQuickQuote__c/fields/Topology__c.field-meta.xml
<CustomField>
    <fullName>Topology__c</fullName>
    <label>Topology</label>
    <length>50</length>
    <type>Text</type>
</CustomField>