UCF-APR2.4/ftr main/force-app/main/default/objects/ReportQuickQuote__c/fields/Wire_Center_Max_Speed__c.field-meta.xml
<CustomField>
    <fullName>Wire_Center_Max_Speed__c</fullName>
    <label>Wire Center Max Speed</label>
    <length>50</length>
    <type>Text</type>
</CustomField>